Fixed a minor bug where long words would overflow buttons.

--- a/style.css
+++ b/style.css
@@ -535,7 +535,6 @@ hr {
 	border-radius: 20px;
 	font-size: 25px;
 	color: white;
-	width: 100px;
 	margin-left: 10px;
 	margin-top: 0px;
 	height: 50px;
